unpackaged/main/default/objects/Asset_History__c/Asset_History__c.object-meta.xml
<CustomObject>
    <label>Asset History</label>
    <nameField>
        <displayFormat>AHT-{000000}</displayFormat>
        <label>Asset History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>