unpackaged/main/default/objects/Asset_History__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset History</relationshipLabel>
    <relationshipName>Asset_History</relationshipName>
    <type>Lookup</type>
</CustomField>