unpackaged/main/default/objects/Asset_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_History</relationshipName>
    <type>Lookup</type>
</CustomField>